# geospatial-examples

./: README.md  pyproject.toml
.github/workflows/: pull-request.yaml
config/: doc_sanitize
data/Natural_Earth/: NE2_50M_SR_04_12.tif  NE2_50M_SR_05_08.tif  NE2_50M_SR_05_09.tif  NE2_50M_SR_05_10.tif  NE2_50M_SR_06_08.tif
notebooks/: basic.ipynb  rasters.ipynb  visualize.ipynb
