[tool.poetry]
name = "geospatial-examples"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
geopandas = "^0.10.2"
cognite-sdk = "^4.8.0"
matplotlib = "^3.5.1"
rasterio = "^1.2.10"
cognite-sdk-experimental = ">=0.105"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
nbval = "^0.9.6"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
